--- a/style.css
+++ b/style.css
@@ -20,17 +20,11 @@ div {
     z-index:10;
 }
 
-#menuItensBar * {
-    position: relative;
-}
-
 #menuItensBar {
     top:        477px;
     width:    11264px;
     height:     820px;
     background-color: rgb(249,247,245);
-    -webkit-transition: -webkit-transform .5s cubic-bezier(0.215, 0.610, 0.355, 1.000),
-        top .6s ease-out;
 }
 
 
@@ -70,9 +64,17 @@ div {
 #contentView.contentMode #tapToOpen {opacity:0}
 
 .menuItem {
+    position:absolute;
     width: 1024px;
-    float:left;
+    left: 1024px;
+    top:0;
+    -webkit-transition: -webkit-transform .5s cubic-bezier(0.215, 0.610, 0.355, 1.000);
 }
+
+.menuItem img {
+    position:relative;
+}
+
 #contentView.contentMode {
     overflow-y:auto;
     -webkit-overflow-scrolling: touch;
