Menu Animation Beta 2
O código está organizado mas o desempenho ainda deixa a desejar. Se
tiver tempo, resolvo isso. Partindo para o conteúdo.

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ div {
 #BTNaudioControl.hollow{background-position-x:-50px;}
 
 #BTNaudioControl::after {
-    opacity:0;
+    display:none;
     width:200px;
     position:fixed;
     top:60px;
@@ -184,7 +184,7 @@ div {
 }
 
 #BTNaudioControl.tooltip::after {
-    opacity:1;
+    display:block;
     -webkit-transform: translateY(5px);
 }
 
